# snowplow

./: .gitignore  ReadMe.md  pyproject.toml
scratch/: main.py
snowplow/: __main__.py  auth.py  builder.py  controller.py  query.py  sfdc.py  utils.py
tests/: conftest.py  test_sfdc.py
