[tool.poetry]
name = "snowplow"
version = "0.0.18"
description = "Utilities for syncing data between snowflake and salesforce."
authors = ["rehket <aalbright@iamrehket.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
snowflake-connector-python = "^2.7.3"
httpx = "^0.22.0"
pydantic = "^1.9.0"
PyJWT = "^2.3.0"
tenacity = "^8.0.1"
click = "8.0.4"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
respx = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
